# inari-code-challenge

./: .env  .env.default  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  answers.MD  docker-compose.yml
src/: pyproject.toml
src/app/: dependencies.py  main.py
src/app/core/database/postgres/: database.py
src/app/core/enums/: enums.py
src/app/core/error/: base_exception.py  game_exceptions.py  guess_exceptions.py
src/app/core/models/postgres/: models.py
src/app/core/repositories/: base_repository.py
src/app/core/services/: base_query_service.py
src/app/core/unit_of_work/: unit_of_work.py
src/app/core/use_case/: use_case.py
src/app/core/utils/: code_guesser.py
src/app/logging/: logging.py  middleware.py  schemas.py
src/app/mastermind/game/: dependencies.py
src/app/mastermind/game/service/: game_service.py
src/app/settings/: base.py
src/app/third_parties/: metrics.py  sentry.py
src/tests/: conftest.py  test_dependencies.py  test_main.py  test_services.py
src/tests/core/utils/: test_code_guesser.py
src/tests/factories/: base_factory.py  game_factory.py  guess_factory.py
src/tests/game/data/models/: test_game_model.py  test_guess_model.py
src/tests/game/data/repositories/: test_game_repository_impl.py  test_guess_repository_impl.py
src/tests/game/data/services/: test_game_query_service_impl.py  test_guess_query_service_impl.py
src/tests/game/data/unit_of_works/: test_game_unit_of_work_impl.py  test_guess_unit_of_work_impl.py
src/tests/game/domain/entities/: test_game_entity.py  test_game_query_model.py  test_guess_entity.py  test_guess_query_model.py
src/tests/game/domain/presentation/: test_create_game_route.py
src/tests/game/domain/use_cases/: test_create_game_use_case.py  (+2 more)
src/tests/game/service/: test_game_service.py
src/tests/third_parties/: test_sentry.py
(+54 files in other folders)
